<resources>
    <string name="app_name">TheKightsTour</string>
    <string name="title">The Knights Tour</string>
    <string name="play_game">Play Game</string>
    <string name="options">Options</string>
    <string name="quit">Quit</string>

    <string-array name="board_size_array">
        <item>4X4</item>
        <item>5X5</item>
        <item>6X6</item>
        <item>7X7</item>
        <item>8X8</item>
        <item>9X9</item>
        <item>10X10</item>
    </string-array>

    <string name="options_place_holder">Options will go here</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="time">Time Display</string>
    <string name="board_here">Board Will Go Here</string>
    <string name="proceed">Proceed</string>
    <string name="win_loss_holder">Directed here after game will display Win/Loss</string>
    <string name="local">Local</string>
    <string name="global">Global</string>
    <string name="global_place_holder">Global Leaderboard displayed here</string>
    <string name="local_place_holder">Local Leaderboard displayed here</string>
    <string name="board_size">Board Size</string>
    <string name="go_back">Go Back</string>
</resources>
