<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_display_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            />

        <TextView
            android:id="@+id/time_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/result_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:visibility="invisible"
        android:textSize="30dp"
        android:layout_gravity="bottom|center"
        android:textColor="@color/colorAccent"
        android:text="Loser"/>

    <FrameLayout
        android:id="@+id/game_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/game_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/game_quit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit"
                />
            <Button
                android:id="@+id/proceed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proceed"
                android:layout_marginLeft="64dp"
                />
        </LinearLayout>

    </FrameLayout>
    <LinearLayout
        android:id="@+id/postgame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/win_loss_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="54dp"/>

        <EditText
            android:id="@+id/global_name"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter a name:"/>

        <Button
            android:id="@+id/proceed_from_postgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>








</FrameLayout>